--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <link href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
-    <script src="https://cdn.bootcss.com/jspdf/1.3.5/jspdf.min.js"></script>
+    <script src="https://cdn.bootcss.com/jspdf/1.3.5/jspdf.min.js"></script> -->
+    <link href="static/css/normalize.min.css" rel="stylesheet">
+    <script src="static/js/html2canvas.min.js"></script>
+    <script src="static/js/jspdf.min.js"></script>
     <title>harrison-client</title>
     <style>
         html, body, #app {
