登录 打印 修改导出pdf

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="static/css/normalize.min.css" rel="stylesheet">
     <script src="static/js/html2canvas.min.js"></script>
     <script src="static/js/jspdf.min.js"></script>
+    <script src="static/js/cookie.js"></script>
     <title>harrison-client</title>
     <style>
         html, body, #app {
